refatorado as pastas e componentes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./nail.html">Nail Style</a>
+              <a class="nav-link" href="./components/nail.html">Nail Style</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./cosmetic.html">Cosméticos</a>
+              <a class="nav-link" href="./components/cosmetic.html">Cosméticos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
