alterado a paleta de cores conforme cliente solicitou

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </section><!--carrossel-->
 
-    <section id="apresentacao" class="d.flex">
+    <section id="apresentacao" class="d.flex p-5">
       <div class="d-md-none justify-content-center text-center align-items-center">
         <img src="./assets/avatar.png" id="avatar" alt="foto de Luana Domiciano" class="w-75">
       </div>
@@ -114,7 +114,7 @@
       </div>
     </section>
 
-    <section id="servicos">
+    <section id="servicos" class="p-5">
       <div class="row border">
         <div class="col-12 col-xl-6 col-md-6 col-sm-12">
           <img src="./assets/servicos.png"
@@ -164,7 +164,7 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Serviço de Manicure</h1>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">MANICURE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
@@ -182,7 +182,7 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Serviço de Pedicure</h1>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">PEDICURE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
@@ -200,7 +200,7 @@
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Unhas em gel</h1>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">UNHAS EM GEL</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
@@ -223,22 +223,24 @@
     </section>
 
     <section id="carrosselDeServicos">
-      <div class="carrossel">
+      <div class="row">
+      <div class="carrossel col">
         <img src="" class="w-25">
         <p class="title">UNHAS EM GEL</p>
       </div>
-      <div class="carrossel">
+      <div class="carrossel col">
         <img src="" alt="">
         <p class="title">UNHAS ARTIFICIAIS</p>
       </div>
-      <div class="carrossel">
+      <div class="carrossel col ">
         <img src="" alt="">
         <p class="title">UNHAS NATURAIS</p>
       </div>
-      <div class="carrossel">
+      <div class="carrossel col">
         <img src="" alt="">
         <p class="title">SERVIÇOS PARA CRIANÇAS (ATÉ 10 ANOS)</p>
       </div>
+    </div>
       <img src="./assets/icon-vector-services.webp" class="w-50 d-flex m-5 px-5" style="height: 20px;" alt="">
     </section>
 
