Feito a estilização inicial dos depoimentos

--- a/index.html
+++ b/index.html
@@ -222,63 +222,60 @@
       </div>
     </section>
 
-    <section id="carrosselDeServicos">
+    <section id="carrosselDeServicos" class="p-5">
       <div class="row">
       <div class="carrossel col">
-        <img src="" class="w-25">
+        <img src="./assets/unha.jpg" class="w-75">
         <p class="title">UNHAS EM GEL</p>
       </div>
       <div class="carrossel col">
-        <img src="" alt="">
+        <img src="./assets/pretinho-basico.png" class="w-75" alt="">
         <p class="title">UNHAS ARTIFICIAIS</p>
       </div>
       <div class="carrossel col ">
-        <img src="" alt="">
+        <img src="./assets/alongamento.png" class="w-75" alt="">
         <p class="title">UNHAS NATURAIS</p>
       </div>
       <div class="carrossel col">
-        <img src="" alt="">
+        <img src="./assets/gettyimages-1008475586-612x612.jpg" class="w-75" alt="">
         <p class="title">SERVIÇOS PARA CRIANÇAS (ATÉ 10 ANOS)</p>
       </div>
     </div>
       <img src="./assets/icon-vector-services.webp" class="w-50 d-flex m-5 px-5" style="height: 20px;" alt="">
     </section>
 
-    <section id="depoimentos">
+    <section id="depoimentos" class="d-flex flex-column justify-content-center align-items-center text-center" >
       <div>
-        <h2 class="title fs-3">Depoimentos</h2>
-        <h3 class="subtitle fs-2">O QUE NOSSOS CLIENTES DIZEM SOBRE NÓS</h3>
-        <h3 class="fs-5">Depoimentos reais de clientes que utilizaram nossos serviços.</h3>
+        <h2 class="title fs-3 m-2">Depoimentos</h2>
+        <h3 class="subtitle fs-2 p-3">O QUE NOSSOS CLIENTES DIZEM SOBRE NÓS</h3>
+        <h3 class="fs-5 mb-5">Depoimentos reais de clientes que utilizaram nossos serviços.</h3>
       </div>
       <div class="row">
         <div id="depoimentosItem" class="col-4">
-          <div class="card" style="width: 18rem;">
-            <img src="./assets/alongamento.png" class="card-img-top"
+          <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
+            <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;"
               alt="imagem de uma mão com foco nas unhas longas e arredondadas esmaltadas na cor preta">
             <div class="card-body">
               <h5 class="card-title">Elaine Bastos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <p class="card-text fs-4">"As unhas feitas pela Lu são perfeitas e o valor cobrado é abaixo do mercado."</p>
             </div>
           </div>
         </div>
         <div id="depoimentosItem" class="col-4">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
+            <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">Personagem 2</h5>
+              <p class="card-text fs-4">"Excelente atendimento, qualidade de serviços técnicos impecável, preço justo, ótima localização, segura, tranquila."</p>
             </div>
           </div>
         </div>
         <div id="depoimentosItem" class="col-4">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+          <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
+            <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">Personagem 3</h5>
+              <p class="card-text fs-4">"Profissionais altamente qualificadas! Educação e presteza desde a recepção! Trabalho de alongamento e manutenção de unhas de microfibra de vidro, manicure, pedicure impecável! Recomendo!"</p>
             </div>
           </div>
         </div>
