--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
         <h3 class="subtitle fs-2 p-3">O QUE NOSSOS CLIENTES DIZEM SOBRE NÓS</h3>
         <h3 class="fs-5 mb-5">Depoimentos reais de clientes que utilizaram nossos serviços.</h3>
       </div>
-      <div class="row">
-        <div id="depoimentosItem" class="col-4">
+      <div class="row d-flex justify-content-center align-items-center align-self-center text-center">
+        <div id="depoimentosItem" class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center align-items-center align-self-center text-center">
           <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
             <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;"
               alt="imagem de uma mão com foco nas unhas longas e arredondadas esmaltadas na cor preta">
@@ -261,7 +261,7 @@
             </div>
           </div>
         </div>
-        <div id="depoimentosItem" class="col-4">
+        <div id="depoimentosItem" class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center align-items-center align-self-center text-center">
           <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
             <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
@@ -270,7 +270,7 @@
             </div>
           </div>
         </div>
-        <div id="depoimentosItem" class="col-4">
+        <div id="depoimentosItem" class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center align-items-center align-self-center text-center">
           <div class="card border-0 d-flex justify-content-center align-items-center" style="width: 18rem;">
             <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
@@ -291,14 +291,14 @@
         <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
         <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
         <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
-        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
+        <img src="./assets/unha.jpg" alt="" class="btn p-5 rounded-5 d-none d-lg-block col-xl-4 col-md-6 col-sm-12">
       </div>
     </section><!--galeria-->
   </main>
