Centralizada a imagem da section servicos

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
     <section id="servicos" class="p-5">
       <div class="row border">
-        <div class="col-12 col-xl-6 col-md-6 col-sm-12">
-          <img src="./assets/servicos.png"
+        <div class="col-12 col-xl-6 col-md-6 col-sm-12 d-flex justify-content-center text-center align-items-center">
+          <img src="./assets/servicos.png" 
             alt="imagem com fundo de pelucia e de dedos com tatuagem de folha e pontinhos proximo as unhas, com unhas longas esmaltadas em degrade na cor lilas e branco">
         </div>
         <div class="col-12 col-xl-6 col-md-6 col-sm-12 d-flex">
