Centralizada as sections do footer e feito a estilização das cores dele

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Dropdown
+                Links úteis
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Eudora</a></li>
@@ -55,10 +55,6 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -241,7 +237,6 @@
         <p class="title">SERVIÇOS PARA CRIANÇAS (ATÉ 10 ANOS)</p>
       </div>
     </div>
-      <img src="./assets/icon-vector-services.webp" class="w-50 d-flex m-5 px-5" style="height: 20px;" alt="">
     </section><!--carrosselDeServicos-->
 
     <section id="depoimentos" class="d-flex flex-column justify-content-center align-items-center text-center" >
@@ -303,18 +298,18 @@
     </section><!--galeria-->
   </main>
   <footer id="rodape" class="row m-5">
-    <div id="sobreNos" class="p-3 col-xl-4 col-md-6 col-sm-12">
-      <h2 class="title">SOBRE NÓS</h2>
-      <P>Venha aqui conosco, você poderá escolher entre uma ampla gama de serviços como Manicure, Pedicure, mais junto
+    <div id="sobreNos" class="d-flex flex-column align-items-center text-center p-3 col-xl-4 col-md-6 col-sm-12">
+      <h2 class="subtitle pb-3">SOBRE NÓS</h2>
+      <P class="py-3">Venha aqui conosco, você poderá escolher entre uma ampla gama de serviços como Manicure, Pedicure, mais junto
         com uma grande seleção de produtos de alta qualidade para você escolher. Não importa quais serviços você
         escolha, nossos técnicos licenciados profissionais e bem treinados lhe trarão a maior satisfação de todos os
         tempos.</P>
-      <P>Aceitamos Visa, Master Card, Cartão de Débito, Não Aceita Cheque</P>
+      <P class="py-3">Aceitamos Visa, Master Card, Cartão de Débito, Não Aceita Cheque</P>
       <P>Obrigado por você ter vindo!</P>
     </div><!--sobreNos-->
-    <div id="sigaNos" class="p-3 col-xl-4 col-md-6 col-sm-12">
-      <h2 class="title">SIGA-NOS</h2>
-      <a href="https://www.instagram.com/luacorreaoficial/">
+    <div id="sigaNos" class="d-flex flex-column align-items-center text-center p-3 col-xl-4 col-md-6 col-sm-12">
+      <h2 class="subtitle pb-3">SIGA-NOS</h2>
+      <a class="py-3" href="https://www.instagram.com/luacorreaoficial/">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
           viewBox="0 0 16 16">
           <path
@@ -323,10 +318,10 @@
       </a>
     </div><!--sigaNos-->
     <div id="con/hor" class="p-3 row col-xl-4 col-md-6 col-sm-12">
-      <div id="contato" class="col-12">
+      <div id="contato" class="col-12 pb-3">
       <div>
-        <h2>CONTATO</h2>
-        <div class="row ">
+        <h2 class="subtitle pb-3 d-flex flex-column justify-content-center align-items-center text-center">CONTATO</h2>
+        <div class="row py-3 ">
           <p class="title col-6">Celular:
             <a href="https://wa.me/+5512996149667text=Gostaria%20de%20saber%20mais%20sobre%20o%20seu%20serviço%20?">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp"
@@ -336,19 +331,19 @@
               </svg>
             </a>
           </p>
-          <p class="subtitle col-6">+55 12 99614-9667</p>
+          <p class="title col-6">+55 12 99614-9667</p>
         </div>
         <div class="row ">
           <p class="title col-6">Endereço:</p>
-          <p class="subtitle col-6">R.Marcelo Carlos Pereira, 210 - Morumbi - SJCampos-SP CEP:12236-530</p>
+          <p class="title col-6">R.Marcelo Carlos Pereira, 210 - Morumbi - SJCampos-SP CEP:12236-530</p>
         </div><div class="row ">
           <p class="title col-6">E-mail:</p>
-          <p class="subtitle col-6">Luana@</p>
+          <p class="title col-6">Luana@</p>
         </div>
       </div>
       </div><!--contato-->
       <div id="horario" class="col-12">
-      <h2>HORARIO DE ATENDIMENTO:</h2>
+      <h2 class="subtitle pb-3 d-flex flex-column justify-content-center align-items-center text-center">HORARIO DE ATENDIMENTO:</h2>
       <p>Ter - Qui: </p>
       <p>Sexta-feira: </p>
       <p>Sábado: </p>
