Feito a estilização do botão da section apresentação, alterado a cor do toggler no header, e alterado as cores de title no modo noturno

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
         <div>
           <div class="d-flex flex-row p-5">
             <h2 class="subtitle fs-2 px-5">Bem vindo</h2>
-            <button class="btn btn-outline-success px-5" href="#">Reserva On-line</button>
+            <a href="https://wa.me/+5512996149667">
+              <button class="btn btn-outline-success px-5" href="#">Reserva On-line</button>  
+            </a>
           </div>
           <h1 class="title display-4 ">Luana Domiciano - Style Nair e Cosméticos</h1>
           <p class="text px-5 mx-5 w-75 d-flex justify-content-center text-center align-items-center align-self-center">
@@ -111,7 +113,7 @@
     </section><!--apresentacao-->
 
     <section id="servicos" class="p-5">
-      <div class="row border">
+      <div class="row border-bottom p-5">
         <div class="col-12 col-xl-6 col-md-6 col-sm-12 d-flex justify-content-center text-center align-items-center">
           <img src="./assets/servicos.png" 
             alt="imagem com fundo de pelucia e de dedos com tatuagem de folha e pontinhos proximo as unhas, com unhas longas esmaltadas em degrade na cor lilas e branco">
