--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="cabecalho" data-bs-theme="light">
+  <header class="cabecalho fixed-top" data-bs-theme="light">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <div class="form-check form-switch" data-bs-toggle="tab"><!--modo noturno-->
