Alterado a section carrosselDeServicos, aplicado o efeito carrossel nela

--- a/index.html
+++ b/index.html
@@ -220,25 +220,66 @@
       </div>
     </section><!--servicos-->
 
-    <section id="carrosselDeServicos" class="p-5">
-      <div class="row">
-      <div class="carrossel col">
-        <img src="./assets/unha.jpg" class="w-75">
-        <p class="title">UNHAS EM GEL</p>
-      </div>
-      <div class="carrossel col">
-        <img src="./assets/pretinho-basico.png" class="w-75" alt="">
-        <p class="title">UNHAS ARTIFICIAIS</p>
-      </div>
-      <div class="carrossel col ">
-        <img src="./assets/alongamento.png" class="w-75" alt="">
-        <p class="title">UNHAS NATURAIS</p>
-      </div>
-      <div class="carrossel col">
-        <img src="./assets/gettyimages-1008475586-612x612.jpg" class="w-75" alt="">
-        <p class="title">SERVIÇOS PARA CRIANÇAS (ATÉ 10 ANOS)</p>
-      </div>
-    </div>
+    <section id="carrosselDeServicos" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carrossel carousel-item active ">
+
+          <div class="row d-flex justify-content-center text-center" >
+            <div class="col-lg-4">
+              <div class="card ">
+                <div class="card-item d-flex flex-column justify-content-center text-center align-items-center">
+                  <img src="./assets/unha.jpg" class="w-50 d-flex justify-content-center align-items-center text-center">
+                  <p class="title">UNHAS EM GEL</p>
+                </div>
+              </div>
+            </div><!--card 1-->
+
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="box front">
+                   <img src="./assets/pretinho-basico.png" class="w-50" alt="">
+                   <p class="title">UNHAS ARTIFICIAIS</p>
+                </div>
+              </div>
+            </div><!--card 2-->
+
+          </div>
+
+        </div><!--carroussel active-->
+
+        <div class="carrossel carousel-item">
+
+          <div class="row d-flex justify-content-center text-center">
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="box front">
+                  <img src="./assets/alongamento.png" class="w-50" alt="">
+                  <p class="title">UNHAS NATURAIS</p>
+                </div>
+              </div>
+            </div><!--card 3-->
+
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="box front">
+                  <img src="./assets/gettyimages-1008475586-612x612.jpg" class="w-50" alt="">
+                  <p class="title">SERVIÇOS PARA CRIANÇAS (ATÉ 10 ANOS)</p>
+                </div>
+              </div>
+            </div><!--card 4-->
+
+          </div>
+
+        </div><!--carroussel-->
+      </div><!--carousel inner-->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carrosselDeServicos" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carrosselDeServicos" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
     </section><!--carrosselDeServicos-->
 
     <section id="depoimentos" class="d-flex flex-column justify-content-center align-items-center text-center" >
@@ -254,7 +295,7 @@
               alt="imagem de uma mão com foco nas unhas longas e arredondadas esmaltadas na cor preta">
             <div class="card-body">
               <h5 class="card-title">Elaine Bastos</h5>
-              <p class="card-text fs-4">"As unhas feitas pela Lu são perfeitas e o valor cobrado é abaixo do mercado."</p>
+              <p class="card-text fs-5">"As unhas feitas pela Lu são perfeitas e o valor cobrado é abaixo do mercado."</p>
             </div>
           </div>
         </div>
@@ -263,7 +304,7 @@
             <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
               <h5 class="card-title">Personagem 2</h5>
-              <p class="card-text fs-4">"Excelente atendimento, qualidade de serviços técnicos impecável, preço justo, ótima localização, segura, tranquila."</p>
+              <p class="card-text fs-5">"Excelente atendimento, qualidade de serviços técnicos impecável, preço justo, ótima localização, segura, tranquila."</p>
             </div>
           </div>
         </div>
@@ -272,7 +313,7 @@
             <img src="./assets/avatar-Elaine.jpg" class="card-img-top rounded-circle" style="width: 75px; height: 75px;" alt="...">
             <div class="card-body">
               <h5 class="card-title">Personagem 3</h5>
-              <p class="card-text fs-4">"Profissionais altamente qualificadas! Educação e presteza desde a recepção! Trabalho de alongamento e manutenção de unhas de microfibra de vidro, manicure, pedicure impecável! Recomendo!"</p>
+              <p class="card-text fs-5">"Profissionais altamente qualificadas! Educação e presteza desde a recepção! Trabalho de alongamento e manutenção de unhas de microfibra de vidro, manicure, pedicure impecável! Recomendo!"</p>
             </div>
           </div>
         </div>
@@ -356,7 +397,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-
+  
 </body>
 
 </html>
