Alterado o espaçamento entre as sections

--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
     </section><!--apresentacao-->
 
     <section id="servicos" class="p-5">
-      <div class="row border-bottom p-5">
+      <div class="row border-bottom p-3w33339e">
         <div class="col-12 col-xl-6 col-md-6 col-sm-12 d-flex justify-content-center text-center align-items-center">
           <img src="./assets/servicos.png" 
             alt="imagem com fundo de pelucia e de dedos com tatuagem de folha e pontinhos proximo as unhas, com unhas longas esmaltadas em degrade na cor lilas e branco">
         </div>
         <div class="col-12 col-xl-6 col-md-6 col-sm-12 d-flex">
-          <div class="row d-flex justify-content-center text-center">
-            <div class="card col-xl-4 col-md-6 col-sm-6 col-12 p-2" style="width: 18rem;">
-
+          <div class="row d-flex justify-content-center text-cente m-2r">
+            <div class="card col-xl-4 col-md-6 col-sm-6 col-12 p-2 m-1" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">MANICURE</h5>
                 <img src="./assets/icon-vector-services.webp" class="card-img" alt="traço divisor com detalhe colonial">
@@ -131,9 +130,8 @@
                   Saiba mais
                 </button>
               </div>
-
             </div>
-            <div class="card col-xl-4 col-md-6 col-sm-6 p-2" style="width: 18rem;">
+            <div class="card col-xl-4 col-md-6 col-sm-6 p-2 m-1" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">PEDICURE</h5>
                 <img src="./assets/icon-vector-services.webp" class="card-img" alt="traço divisor com detalhe colonial">
@@ -144,8 +142,7 @@
                 </button>
               </div>
             </div>
-
-            <div class="card col-xl-4 col-md-6 col-sm-6 p-2" style="width: 18rem;">
+            <div class="card col-xl-4 col-md-6 col-sm-6 p-2 m-1" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">UNHAS EM GEL</h5>
                 <img src="./assets/icon-vector-services.webp" class="card-img" alt="traço divisor com detalhe colonial">
@@ -155,6 +152,7 @@
                 </button>
               </div>
             </div>
+          </div>
 
             <!--MODAL 1-->
             <div class="modal fade" id="modal-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -211,7 +209,6 @@
               </div>
             </div><!--modal 3 -->
 
-          </div>
         </div>
       </div>
       <div id="divisor" class="my-5 py-2 d-flex justify-content-center align-items-center text-center">
@@ -220,21 +217,21 @@
       </div>
     </section><!--servicos-->
 
-    <section id="carrosselDeServicos" class="carousel slide">
+    <section id="carrosselDeServicos" class="carousel slide my-5">
       <div class="carousel-inner">
         <div class="carrossel carousel-item active ">
-
           <div class="row d-flex justify-content-center text-center" >
-            <div class="col-lg-4">
+            
+            <div class="col-6">
               <div class="card ">
-                <div class="card-item d-flex flex-column justify-content-center text-center align-items-center">
-                  <img src="./assets/unha.jpg" class="w-50 d-flex justify-content-center align-items-center text-center">
+                <div class="box front">
+                  <img src="./assets/unha.jpg" class="w-50">
                   <p class="title">UNHAS EM GEL</p>
                 </div>
               </div>
             </div><!--card 1-->
 
-            <div class="col-lg-4">
+            <div class="col-6">
               <div class="card">
                 <div class="box front">
                    <img src="./assets/pretinho-basico.png" class="w-50" alt="">
@@ -250,7 +247,8 @@
         <div class="carrossel carousel-item">
 
           <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-4">
+
+            <div class="col-6">
               <div class="card">
                 <div class="box front">
                   <img src="./assets/alongamento.png" class="w-50" alt="">
@@ -259,7 +257,7 @@
               </div>
             </div><!--card 3-->
 
-            <div class="col-lg-4">
+            <div class="col-6">
               <div class="card">
                 <div class="box front">
                   <img src="./assets/gettyimages-1008475586-612x612.jpg" class="w-50" alt="">
@@ -282,7 +280,7 @@
     </button>
     </section><!--carrosselDeServicos-->
 
-    <section id="depoimentos" class="d-flex flex-column justify-content-center align-items-center text-center" >
+    <section id="depoimentos" class="d-flex flex-column justify-content-center align-items-center text-center my-5" >
       <div>
         <h2 class="title fs-3 m-2">Depoimentos</h2>
         <h3 class="subtitle fs-2 p-3">O QUE NOSSOS CLIENTES DIZEM SOBRE NÓS</h3>
